<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/admin_menu"
        android:title="@string/nav_admin">
        <menu>
            <group
                android:checkableBehavior="single" >

                <item
                    android:id="@+id/nav_new_user"
                    android:icon="@drawable/ic_add_user"
                    android:title="@string/nav_new_user" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/common_menu"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_quick_record"
            android:icon="@drawable/ic_quick_record"
            android:title="@string/quick_record" />
        <item
            android:id="@+id/nav_manual_record"
            android:icon="@drawable/ic_manual_record"
            android:title="@string/manual_record" />
        <item
            android:id="@+id/nav_my_records"
            android:icon="@drawable/ic_record_list"
            android:title="@string/my_records" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

    </group>



</menu>

