<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardElevation="8dp"
    card_view:cardCornerRadius="25dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_date"
            card_view:layout_constraintEnd_toStartOf="@+id/textView17"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_time_entry"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_time_exit"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/textView17"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_record_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="25-12-2019"
            card_view:layout_constraintEnd_toEndOf="@+id/textView16"
            card_view:layout_constraintStart_toStartOf="@+id/textView16"
            card_view:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/tv_time_entry_record_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="09:00 CEST"
            card_view:layout_constraintEnd_toEndOf="@+id/textView17"
            card_view:layout_constraintStart_toStartOf="@+id/textView17"
            card_view:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/tv_time_exit_record_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="15:00 CEST"
            card_view:layout_constraintEnd_toEndOf="@+id/textView18"
            card_view:layout_constraintStart_toStartOf="@+id/textView18"
            card_view:layout_constraintTop_toBottomOf="@+id/textView18" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_time_entry_record_item" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_signed_by_user"
            card_view:layout_constraintBottom_toBottomOf="@+id/cb_signed_by_user"
            card_view:layout_constraintEnd_toStartOf="@+id/cb_signed_by_user"
            card_view:layout_constraintTop_toTopOf="@+id/cb_signed_by_user" />

        <CheckBox
            android:id="@+id/cb_signed_by_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_date_record_item"
            card_view:layout_constraintStart_toEndOf="@+id/tv_date_record_item"
            card_view:layout_constraintTop_toBottomOf="@+id/view2"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/tv_signed_by_admin"
            card_view:layout_constraintBottom_toBottomOf="@+id/cb_signed_by_admin"
            card_view:layout_constraintEnd_toStartOf="@+id/cb_signed_by_admin"
            card_view:layout_constraintTop_toTopOf="@+id/cb_signed_by_admin" />

        <CheckBox
            android:id="@+id/cb_signed_by_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="false"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_time_exit_record_item"
            card_view:layout_constraintStart_toEndOf="@+id/tv_time_exit_record_item"
            card_view:layout_constraintTop_toBottomOf="@+id/view2"
            card_view:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>